--- a/.github/workflows/publish-dotnet-tool.yml
+++ b/.github/workflows/publish-dotnet-tool.yml
@@ -28,6 +28,7 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
+        source-url: https://api.nuget.org/v3/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
         
