--- a/trello-backuper.cli/trello-backuper.cli.csproj
+++ b/trello-backuper.cli/trello-backuper.cli.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
@@ -12,13 +12,22 @@
 
 		<Authors>Niklas Pfenninger</Authors>
 		<PackageProjectUrl>https://github.com/nokxs/trello-backupper</PackageProjectUrl>
-		<!--<PackageReadmeFile>Readme.md</PackageReadmeFile>
-		<PackageLicenseFile>LICENSE</PackageLicenseFile>-->
+		<PackageReadmeFile>Readme.md</PackageReadmeFile>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<RepositoryUrl>https://github.com/nokxs/trello-backupper</RepositoryUrl>
 		<PackageTags>trello backup</PackageTags>
 		<Version>0.0.1</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\LICENSE">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Include="..\Readme.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
