--- a/trello-backuper.cli/trello-backuper.cli.csproj
+++ b/trello-backuper.cli/trello-backuper.cli.csproj
@@ -26,12 +26,13 @@
 			<PackagePath></PackagePath>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-		<None Include="..\Readme.md" Pack="true" PackagePath="\"/>
+		<None Include="..\Readme.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="System.CommandLine" Version="2.0.0-beta3.22114.1" />
+		<PackageReference Include="Telegram.Bot" Version="18.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
