--- a/trello-backuper.lib/trello-backuper.lib.csproj
+++ b/trello-backuper.lib/trello-backuper.lib.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>trello_backuper.lib</RootNamespace>
+    <RootNamespace>trello.backuper.lib</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
