--- a/trello-backuper.cli/trello-backuper.cli.csproj
+++ b/trello-backuper.cli/trello-backuper.cli.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
-		<RootNamespace>trello_backupper.cli</RootNamespace>
+		<RootNamespace>trello.backupper.cli</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackAsTool>true</PackAsTool>
