Add webhook integration (#2)
* Add possibility to call a web hook

* Adjust namespaces

* Update readme and webhook caller

* Use different replace symbol

--- a/trello-backuper.docker/trello-backuper.docker.csproj
+++ b/trello-backuper.docker/trello-backuper.docker.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-trello_backuper.docker-EFE0B9A7-169F-42A9-8111-5862CA473037</UserSecretsId>
-    <RootNamespace>trello_backuper.docker</RootNamespace>
+    <RootNamespace>trello.backupper.docker</RootNamespace>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
