--- a/trello-backuper.cli/trello-backuper.cli.csproj
+++ b/trello-backuper.cli/trello-backuper.cli.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
-		<RootNamespace>trello_backuper.cli</RootNamespace>
+		<RootNamespace>trello.backupper.cli</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackAsTool>true</PackAsTool>
@@ -26,7 +26,7 @@
 			<PackagePath></PackagePath>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-		<None Include="..\Readme.md" Pack="true" PackagePath="\"/>
+		<None Include="..\Readme.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
